[package]
name = "rig-codebase-rag"
version = "0.1.0"
edition = "2024"

[dependencies]
rig-core = "0.6.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dotenv = "0.15"
ignore = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
